--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -65,7 +65,7 @@
           <td>
               Dias</td>
           <td>
-              cabaña 1</td>
+              cabaña </td>
           <td>
               cabaña 2</td>
           <td>
